<resources>
    <string name="app_name">Airo</string>
    <string name="title_home">Add</string>
    <string name="title_map">Map</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="google_sign_in_token">902173168925-u8r3ijj6lcagusbl4erh8jgib8p4qchi.apps.googleusercontent.com</string>
    <string name="appwidget_text">Subscription widget</string>
    <string name="add_widget">Air Scanner</string>
    <string name="humidity">Humidity: %s</string>
    <string name="temperature">Temperature: %s</string>
    <string name="special">Special data: %s</string>
    <string name="co2">CO2: %s</string>
    <string name="remove_title">Remove</string>
    <string name="remove_device_description">Are you sure tou want to remove this device?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="logout_alert_title">Logout?</string>
    <string name="edit">Edit</string>
    <string name="history">History</string>
    <string name="permission_message">The app requires the permission on order to provide the map functionality</string>
    <string name="display_name">Display name</string>
    <string name="lat">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="is_public">Is Public</string>
    <string name="gateway">Gateway:</string>
    <string name="data_format">Data format:</string>
    <string name="co2_label">&#160;CO2</string>
    <string name="pm2_5">&#160;PM2.5</string>
    <string name="pm1_0">&#160;PM1.0</string>
    <string name="pm10">&#160;PM10</string>
    <string name="temperature_label">&#160;Temperature</string>
    <string name="humidity_label">&#160;Humidity</string>
    <string name="save">Save</string>
    <string-array name="demo_gateways">
        <item>A</item>
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="metric_types">
        <item>CO2</item>
        <item>PM2,5</item>
        <item>PM1,0</item>
        <item>PM10</item>
        <item>Temperature</item>
        <item>Humidity</item>
    </string-array>
    <string-array name="data_format_values">
        <item>json</item>
        <item>single_value</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="is_adding">isAdding</string>
    <string name="key">Key</string>
    <string name="by">by</string>
    <string name="success">Success!</string>
    <string name="the_device_was_added_now_you_can_track_it">The device was added. Now you can track it.</string>
    <string name="the_gateway_was_added_now_you_can_track_it">The gateway was added. Now you can track it.</string>
    <string name="something_weird_happened">Something weird happened. Keep calm and try again.</string>
    <string name="key_cert">-----BEGIN CERTIFICATE-----
MIICnjCCAYYCCQDeJVYFfCh18TANBgkqhkiG9w0BAQsFADARMQ8wDQYDVQQDDAZ1
bnVzZWQwHhcNMjAwNTI1MDkzNDMyWhcNMjAwNjI0MDkzNDMyWjARMQ8wDQYDVQQD
DAZ1bnVzZWQwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQC1J5NYNUcc
g1PXrf+Mb5kLGhMEKuYToaJTHv0mM74ZBG+lMKBv++dvzF/VxKlkkBnk7weuKE6j
tb6nmOtOs+MmqSUqqLcKj4FK+uQLrZzIoZRi3PifYzswTAnhx3FPZIO3CDknH5e3
83z40180Mn9NR9imN0nQK4YZwGwoOR3fU/PC5nzDzsZ5Yy7LWQgCvOZ3aZIsWQNq
vk3NN2I2Lw8G/ht9AQMSl2UxADoqKZra9+W+dXIls90I6jTQiJaCm0JJaknbMgYe
AIaUH0etB6Lv7HYnzAqvWoJPHmUBX3oin5EScx7eOkwmO84F8eDnFZMgkTMHZUOg
Votgp8UPAjB3AgMBAAEwDQYJKoZIhvcNAQELBQADggEBAF2ToT35KbD8q5xPN6Ow
HWSvNZkhgO8xS9hr+Kv2fT9582onTwNn7RlJWumrNxPGq/yIsaZiIRrGAfD4Xyxa
GnOpWmBLJbfm6oqNqw+DzdA7HqqnVJDwln8AlRH/Ow/PY9ZYo4dU1AO1m1FQuGHk
nM+Lz5wk7gQyK+wMmkZi1bA9dn/B6rFS/e/BZP9Z8GhncZWBqL49pmuPYUIRV8qk
lVfcHqiOKYyhX1PH6krlCO+g4aNkT1M3PzGAdUx+24FgHpraVZT6ykhxE0yve1tW
frhzIf4mqRVQUcQd3JCDGKWLFxisgKrjc7gfm+DDoDfKLGHkKEzZkfOXZSTkYXbc
/Zg=
-----END CERTIFICATE-----</string>
    <string name="oops">Oops!</string>
    <string name="try_again">Try again</string>
    <string name="privacy">Privacy</string>
    <string name="add_new">+ Add new</string>
    <string name="profile">Profile</string>
    <string name="add">+ Add</string>
    <string name="measurement">Measurement</string>
    <string name="remove_device_title">Remove device</string>
    <string name="remove_gateway_title">Remove gateway</string>
    <string name="remove_device_prompt">Are you sure you want to remove this device?</string>
    <string name="remove_gateway_prompt">Are you sure you want to remove this gateway?</string>
    <string name="device_was_removed">Device was removed</string>
    <string name="gateway_was_removed">Gateway was removed</string>
    <string name="now">Now</string>
    <string name="hour">Hour</string>
    <string name="week">Week</string>
    <string name="today">Today</string>
    <string name="all">&#160;All</string>
    <string name="apply">Apply</string>
    <string name="location">Location</string>
    <string name="add_to_widget">Add to widget</string>
    <string name="added_to_the_widget">Device has been added to the widget</string>
    <string name="loading">Loading</string>
    <string name="login_sso">Please Log In via Gmail SSO account to have possibility to manage personal devices and recieve notifications. </string>
    <string name="client_id">Client id</string>
    <string name="topic">Topic</string>
    <string name="client_id_value">projects/gd-gcp-rnd-connected-apps/locations/europe-west1/registries/europe-registry/devices/g-%s</string>
    <string name="topic_value">/devices/d-%s/events</string>
    <string name="no_data_available">No data available</string>
</resources>
