<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="AppDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/error_dialog_background"
    android:paddingHorizontal="@dimen/padding_22"
    android:paddingVertical="@dimen/padding_42">

    <ImageView
        android:layout_width="@dimen/diameter_80"
        android:layout_height="@dimen/diameter_80"
        android:layout_marginBottom="@dimen/margin_35"
        android:src="@drawable/ic_error" />

    <TextView
        android:fontFamily="@font/fira_sans_bold"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oops" />

    <TextView
        android:id="@+id/tv_error_dialog_message"
        android:fontFamily="@font/source_sans_pro_regular"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_weird_happened" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_35"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/try_again"
        android:background="@drawable/ghost_background"/>
</LinearLayout>