<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.griddynamics.connectedapps.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_edit"
            app:destination="@id/navigation_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.griddynamics.connectedapps.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" >
        <action
            android:id="@+id/action_navigation_map_to_navigation_edit"
            app:destination="@id/navigation_edit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.griddynamics.connectedapps.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.griddynamics.connectedapps.ui.edit.EditDeviceFragment"
        android:label="@string/edit"
        tools:layout="@layout/edit_device_fragment">
        <argument
            android:name="device"
            android:defaultValue="null"
            app:argType="string" />
    </fragment>
</navigation>
