<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.griddynamics.connectedapps.ui.edit.gateway.EditGatewayFragment">

    <EditText
        android:id="@+id/et_gateway_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_gateway_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_gateway_name" />

    <Button
        android:id="@+id/btn_edit_gateway_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_normal"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/et_gateway_key"
        android:layout_marginBottom="?actionBarSize"
        android:layout_marginHorizontal="@dimen/marker_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
