<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/greeting_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.greeting.GreetingActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/description_padding_15"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/auth_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_250"
            android:src="@drawable/log_in" />
        
        <TextView
            android:layout_marginTop="@dimen/margin_35"
            android:layout_marginBottom="@dimen/padding_42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/margin_10"
            style="@style/AppText.FiraSans.White.16"
            android:text="@string/login_sso"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/auth_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/auth_guest_sign_in_text"
        style="@style/AppText.SourceSansPro.White.14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/continue_as_guest"
        android:visibility="invisible" />

</LinearLayout>